--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
 .container {
   width: 90vw;
   height: 90vh;
+  display: flex;
   border-radius: 12px;
   background-color: rgba(17, 25, 40, 0.75);
   backdrop-filter: blur(19px) saturate(180%);
