[Feat] Add user modal added

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -58,7 +58,7 @@
   .center {
     padding: 10px;
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
